<resources>
    <string name="app_name">Notepad Free</string>
    <string name="notes">Notes</string>
    <string name="new_category_name">New category name</string>
    <string name="edit_category_name">Edit category name</string>
    <string name="category_exists">Category with that name already exists</string>
    <string name="categories">Categories</string>
    <string name="edit_categories">Edit categories</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="backup">Backup</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="more">More</string>
    <string name="uri_app">https://play.google.com/store/apps/details?id=com.atomczak.notepat&amp;hl=en_US&amp;pli=1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="show_instructions">Show Instructions</string>
    <string name="save_backup_to_a_file">Save backup to a file</string>
    <string name="load_notes_from_a_backup_file">Load notes from a backup file</string>
    <string name="content_backup">A backup copy is a file containing copy of each note (except deleted notes in the "Trash" folder). It can be used to make copy of notes outside the device, or to transfer notes to another device. Categories are not included in a backup copy file.</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_text">Enter text...</string>
    <string name="untitled">Untitled</string>
    <string name="last_edit">Last edit: %1$s </string>
    <string name="created">Created: %1$s</string>
    <string name="delete_category_confirmation">Delete category \'%1$s\'\? Notes from the category won\'t be deleted.</string>
    <string name="job_name">"Note print"</string>
    <string name="delete_note_message">The \'%1$s\' note will be deleted. Are you sure?</string>
    <string name="undo_all_message">Remove all of the note changes made since the last opening of the note?</string>
    <string name="categories_empty_message">Categories can be added in the app\'s menu. To open the menu use menu in the top left corner off the note list screen.</string>

    <string-array name="themeColorHex">
        <item>#F9F8C0</item>
        <item>#EF9A9A</item>
        <item>#B39DDB</item>
        <item>#81D4FA</item>
        <item>#A5D6A7</item>
        <item>#FFF59D</item>
        <item>#FFAB91</item>
        <item>#B0BEC5</item>
        <item>#F48FB1</item>
        <item>#9FA8DA</item>
        <item>#80DEEA</item>
        <item>#C5E1A5</item>
        <item>#FFE082</item>
        <item>#BCAAA4</item>
        <item>#CE93D8</item>
        <item>#90CAF9</item>
        <item>#80CBC4</item>
        <item>#E6EE9C</item>
        <item>#FFCC80</item>
        <item>#EEEEEE</item>
        <item>#00FFFFFF</item>
    </string-array>

    <string-array name="themeColorText">
        <item>#0078FF</item>
        <item>#00AB34</item>
        <item>#ffc000</item>
        <item>#ef143e</item>
        <item>#FF000000</item>
        <item>#6a757e</item>
        <item>#333333</item>
        <item>#FFFFFF</item>
    </string-array>
</resources>
