<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/notes" />

    <item android:id="@+id/group_categories"
        android:title="Categories">
        <menu>
<!--            <item-->
<!--                android:id="@+id/menu_edit_categories"-->
<!--                android:icon="@drawable/ic_edit_categories"-->
<!--                android:title="@string/edit_categories" />-->
        </menu>
    </item>

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup" />
        <item
            android:id="@+id/menu_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_rate_app"
            android:title="@string/rate_the_app" />
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/menu_privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
    </group>
</menu>