<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BackupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/backup"
        app:titleTextColor="@color/color_white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showInstructionButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_button"
        android:text="@string/show_instructions"
        android:textColor="@color/color_black_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showInstructionButton">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/content_backup"
            android:textColor="@color/color_black_medium"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBackupButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button"
            android:text="@string/save_backup_to_a_file"
            android:textColor="@color/color_black_medium"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loadNotesFromBackupButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_button"
            android:text="@string/load_notes_from_a_backup_file"
            android:textColor="@color/color_black_medium"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>